generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

// Generated by dear-bindings-ffi. Do not edit.
#ifndef DEAR_IMGUI_WRAPPERS_H
#define DEAR_IMGUI_WRAPPERS_H

#include "dcimgui_nodefaultargfunctions_internal.h"

#ifdef __cplusplus
extern "C" {
#endif

void cImBezierCubicCalc_wrap(ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, float t, ImVec2* _out);
void cImBezierCubicClosestPoint_wrap(ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, ImVec2 const* p, int num_segments, ImVec2* _out);
void cImBezierCubicClosestPointCasteljau_wrap(ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, ImVec2 const* p, float tess_tol, ImVec2* _out);
void cImBezierQuadraticCalc_wrap(ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, float t, ImVec2* _out);
void cImClamp_wrap(ImVec2 const* v, ImVec2 const* mn, ImVec2 const* mx, ImVec2* _out);
float cImDot_wrap(ImVec2 const* a, ImVec2 const* b);
void cImFloorImVec2_wrap(ImVec2 const* v, ImVec2* _out);
void cImFontAtlasTextureGetSizeEstimate_wrap(ImFontAtlas* atlas, ImVec2i* _out);
void cImFontAtlasUpdateDrawListsTextures_wrap(ImFontAtlas* atlas, ImTextureRef const* old_tex, ImTextureRef const* new_tex);
void cImFontCalcTextSizeEx_wrap(ImFont* font, float size, float max_width, float wrap_width, const char* text_begin, const char* text_end_display, const char* text_end, const char** out_remaining, ImVec2* out_offset, ImDrawTextFlags flags, ImVec2* _out);
float cImInvLength_wrap(ImVec2 const* lhs, float fail_value);
float cImLengthSqr_wrap(ImVec2 const* lhs);
float cImLengthSqrImVec4_wrap(ImVec4 const* lhs);
void cImLerp_wrap(ImVec2 const* a, ImVec2 const* b, float t, ImVec2* _out);
void cImLerpImVec2_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* t, ImVec2* _out);
void cImLerpImVec4_wrap(ImVec4 const* a, ImVec4 const* b, float t, ImVec4* _out);
void cImLineClosestPoint_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* p, ImVec2* _out);
void cImMax_wrap(ImVec2 const* lhs, ImVec2 const* rhs, ImVec2* _out);
void cImMin_wrap(ImVec2 const* lhs, ImVec2 const* rhs, ImVec2* _out);
void cImMul_wrap(ImVec2 const* lhs, ImVec2 const* rhs, ImVec2* _out);
void cImRotate_wrap(ImVec2 const* v, float cos_a, float sin_a, ImVec2* _out);
float cImTriangleArea_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c);
void cImTriangleBarycentricCoords_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* p, float* out_u, float* out_v, float* out_w);
void cImTriangleClosestPoint_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* p, ImVec2* _out);
bool cImTriangleContainsPoint_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* p);
bool cImTriangleIsClockwise_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c);
void cImTruncImVec2_wrap(ImVec2 const* v, ImVec2* _out);
bool ImGui_ArrowButtonEx_wrap(const char* str_id, ImGuiDir dir, ImVec2 const* size_arg, ImGuiButtonFlags flags);
bool ImGui_BeginBoxSelect_wrap(ImRect const* scope_rect, ImGuiWindow* window, ImGuiID box_select_id, ImGuiMultiSelectFlags ms_flags);
bool ImGui_BeginChildEx_wrap(const char* name, ImGuiID id, ImVec2 const* size_arg, ImGuiChildFlags child_flags, ImGuiWindowFlags window_flags);
bool ImGui_BeginComboPopup_wrap(ImGuiID popup_id, ImRect const* bb, ImGuiComboFlags flags);
bool ImGui_BeginDragDropTargetCustom_wrap(ImRect const* bb, ImGuiID id);
bool ImGui_BeginTabBarEx_wrap(ImGuiTabBar* tab_bar, ImRect const* bb, ImGuiTabBarFlags flags);
bool ImGui_BeginTableWithID_wrap(const char* name, ImGuiID id, int columns_count, ImGuiTableFlags flags, ImVec2 const* outer_size, float inner_width);
bool ImGui_ButtonBehavior_wrap(ImRect const* bb, ImGuiID id, bool* out_hovered, bool* out_held, ImGuiButtonFlags flags);
bool ImGui_ButtonWithFlags_wrap(const char* label, ImVec2 const* size_arg, ImGuiButtonFlags flags);
void ImGui_CalcClipRectVisibleItemsY_wrap(ImRect const* clip_rect, ImVec2 const* pos, float items_height, int* out_visible_start, int* out_visible_end);
void ImGui_CalcItemSize_wrap(ImVec2 const* size, float default_w, float default_h, ImVec2* _out);
ImDrawFlags ImGui_CalcRoundingFlagsForRectInRect_wrap(ImRect const* r_in, ImRect const* r_outer, float threshold);
void ImGui_CalcWindowNextAutoFitSize_wrap(ImGuiWindow* window, ImVec2* _out);
float ImGui_CalcWrapWidthForPos_wrap(ImVec2 const* pos, float wrap_pos_x);
bool ImGui_CloseButton_wrap(ImGuiID id, ImVec2 const* pos);
bool ImGui_CollapseButton_wrap(ImGuiID id, ImVec2 const* pos);
void ImGui_DebugRenderViewportThumbnail_wrap(ImDrawList* draw_list, ImGuiViewportP* viewport, ImRect const* bb);
void ImGui_EndBoxSelect_wrap(ImRect const* scope_rect, ImGuiMultiSelectFlags ms_flags);
void ImGui_FindBestWindowPosForPopup_wrap(ImGuiWindow* window, ImVec2* _out);
void ImGui_FindBestWindowPosForPopupEx_wrap(ImVec2 const* ref_pos, ImVec2 const* size, ImGuiDir* last_dir, ImRect const* r_outer, ImRect const* r_avoid, ImGuiPopupPositionPolicy policy, ImVec2* _out);
void ImGui_FindHoveredWindowEx_wrap(ImVec2 const* pos, bool find_first_and_in_any_viewport, ImGuiWindow** out_hovered_window, ImGuiWindow** out_hovered_window_under_moving_window);
void ImGui_GetKeyMagnitude2d_wrap(ImGuiKey key_left, ImGuiKey key_right, ImGuiKey key_up, ImGuiKey key_down, ImVec2* _out);
void ImGui_GetPopupAllowedExtentRect_wrap(ImGuiWindow* window, ImRect* _out);
void ImGui_GetWindowScrollbarRect_wrap(ImGuiWindow* window, ImGuiAxis axis, ImRect* _out);
bool ImGui_ImageButtonWithFlags_wrap(ImGuiID id, ImTextureRef const* tex_ref, ImVec2 const* image_size, ImVec2 const* uv0, ImVec2 const* uv1, ImVec4 const* bg_col, ImVec4 const* tint_col, ImGuiButtonFlags flags);
bool ImGui_InputTextWithHintAndSize_wrap(const char* label, const char* hint, char* buf, int buf_size, ImVec2 const* size_arg, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
bool ImGui_IsClippedEx_wrap(ImRect const* bb, ImGuiID id);
bool ImGui_ItemAdd_wrap(ImRect const* bb, ImGuiID id, const ImRect* nav_bb, ImGuiItemFlags extra_flags);
bool ImGui_ItemHoverable_wrap(ImRect const* bb, ImGuiID id, ImGuiItemFlags item_flags);
void ImGui_ItemSize_wrap(ImVec2 const* size, float text_baseline_y);
void ImGui_ItemSizeImRect_wrap(ImRect const* bb, float text_baseline_y);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);
void ImGui_RenderArrow_wrap(ImDrawList* draw_list, ImVec2 const* pos, ImU32 col, ImGuiDir dir, float scale);
void ImGui_RenderArrowPointingAt_wrap(ImDrawList* draw_list, ImVec2 const* pos, ImVec2 const* half_sz, ImGuiDir direction, ImU32 col);
void ImGui_RenderBullet_wrap(ImDrawList* draw_list, ImVec2 const* pos, ImU32 col);
void ImGui_RenderCheckMark_wrap(ImDrawList* draw_list, ImVec2 const* pos, ImU32 col, float sz);
void ImGui_RenderColorComponentMarker_wrap(ImRect const* bb, ImU32 col, float rounding);
void ImGui_RenderColorRectWithAlphaCheckerboard_wrap(ImDrawList* draw_list, ImVec2 const* p_min, ImVec2 const* p_max, ImU32 fill_col, float grid_step, ImVec2 const* grid_off, float rounding, ImDrawFlags flags);
void ImGui_RenderDragDropTargetRectEx_wrap(ImDrawList* draw_list, ImRect const* bb);
void ImGui_RenderDragDropTargetRectForItem_wrap(ImRect const* bb);
void ImGui_RenderFrame_wrap(ImVec2 const* p_min, ImVec2 const* p_max, ImU32 fill_col, bool borders, float rounding);
void ImGui_RenderFrameBorder_wrap(ImVec2 const* p_min, ImVec2 const* p_max, float rounding);
void ImGui_RenderMouseCursor_wrap(ImVec2 const* pos, float scale, ImGuiMouseCursor mouse_cursor, ImU32 col_fill, ImU32 col_border, ImU32 col_shadow);
void ImGui_RenderNavCursor_wrap(ImRect const* bb, ImGuiID id, ImGuiNavRenderCursorFlags flags);
void ImGui_RenderNavHighlight_wrap(ImRect const* bb, ImGuiID id, ImGuiNavRenderCursorFlags flags);
void ImGui_RenderRectFilledInRangeH_wrap(ImDrawList* draw_list, ImRect const* rect, ImU32 col, float fill_x0, float fill_x1, float rounding);
void ImGui_RenderRectFilledWithHole_wrap(ImDrawList* draw_list, ImRect const* outer, ImRect const* inner, ImU32 col, float rounding);
void ImGui_RenderText_wrap(ImVec2 const* pos, const char* text, const char* text_end, bool hide_text_after_hash);
void ImGui_RenderTextClipped_wrap(ImVec2 const* pos_min, ImVec2 const* pos_max, const char* text, const char* text_end, const ImVec2* text_size_if_known, ImVec2 const* align, const ImRect* clip_rect);
void ImGui_RenderTextClippedWithDrawList_wrap(ImDrawList* draw_list, ImVec2 const* pos_min, ImVec2 const* pos_max, const char* text, const char* text_end, const ImVec2* text_size_if_known, ImVec2 const* align, const ImRect* clip_rect);
void ImGui_RenderTextEllipsis_wrap(ImDrawList* draw_list, ImVec2 const* pos_min, ImVec2 const* pos_max, float ellipsis_max_x, const char* text, const char* text_end, const ImVec2* text_size_if_known);
void ImGui_RenderTextWrapped_wrap(ImVec2 const* pos, const char* text, const char* text_end, float wrap_width);
void ImGui_ScrollToBringRectIntoView_wrap(ImGuiWindow* window, ImRect const* rect);
void ImGui_ScrollToRect_wrap(ImGuiWindow* window, ImRect const* rect, ImGuiScrollFlags flags);
void ImGui_ScrollToRectEx_wrap(ImGuiWindow* window, ImRect const* rect, ImGuiScrollFlags flags, ImVec2* _out);
bool ImGui_ScrollbarEx_wrap(ImRect const* bb, ImGuiID id, ImGuiAxis axis, ImS64* p_scroll_v, ImS64 avail_v, ImS64 contents_v, ImDrawFlags draw_rounding_flags);
void ImGui_SetLastItemData_wrap(ImGuiID item_id, ImGuiItemFlags item_flags, ImGuiItemStatusFlags status_flags, ImRect const* item_rect);
void ImGui_SetNavID_wrap(ImGuiID id, ImGuiNavLayer nav_layer, ImGuiID focus_scope_id, ImRect const* rect_rel);
void ImGui_SetWindowClipRectBeforeSetChannel_wrap(ImGuiWindow* window, ImRect const* clip_rect);
void ImGui_SetWindowHitTestHole_wrap(ImGuiWindow* window, ImVec2 const* pos, ImVec2 const* size);
void ImGui_SetWindowPosImGuiWindowPtr_wrap(ImGuiWindow* window, ImVec2 const* pos, ImGuiCond cond);
void ImGui_SetWindowSizeImGuiWindowPtr_wrap(ImGuiWindow* window, ImVec2 const* size, ImGuiCond cond);
void ImGui_ShadeVertsLinearColorGradientKeepAlpha_wrap(ImDrawList* draw_list, int vert_start_idx, int vert_end_idx, ImVec2 const* gradient_p0, ImVec2 const* gradient_p1, ImU32 col0, ImU32 col1);
void ImGui_ShadeVertsLinearUV_wrap(ImDrawList* draw_list, int vert_start_idx, int vert_end_idx, ImVec2 const* a, ImVec2 const* b, ImVec2 const* uv_a, ImVec2 const* uv_b, bool clamp);
void ImGui_ShadeVertsTransformPos_wrap(ImDrawList* draw_list, int vert_start_idx, int vert_end_idx, ImVec2 const* pivot_in, float cos_a, float sin_a, ImVec2 const* pivot_out);
bool ImGui_SliderBehavior_wrap(ImRect const* bb, ImGuiID id, ImGuiDataType data_type, void* p_v, const void* p_min, const void* p_max, const char* format, ImGuiSliderFlags flags, ImRect* out_grab_bb);
bool ImGui_SplitterBehavior_wrap(ImRect const* bb, ImGuiID id, ImGuiAxis axis, float* size1, float* size2, float min_size1, float min_size2, float hover_extend, float hover_visibility_delay, ImU32 bg_col);
void ImGui_TabBarQueueReorderFromMousePos_wrap(ImGuiTabBar* tab_bar, ImGuiTabItem* tab, ImVec2 const* mouse_pos);
void ImGui_TabItemBackground_wrap(ImDrawList* draw_list, ImRect const* bb, ImGuiTabItemFlags flags, ImU32 col);
void ImGui_TabItemCalcSize_wrap(ImGuiWindow* window, ImVec2* _out);
void ImGui_TabItemCalcSizeStr_wrap(const char* label, bool has_close_button_or_unsaved_marker, ImVec2* _out);
void ImGui_TabItemLabelAndCloseButton_wrap(ImDrawList* draw_list, ImRect const* bb, ImGuiTabItemFlags flags, ImVec2 const* frame_padding, const char* label, ImGuiID tab_id, ImGuiID close_button_id, bool is_contents_visible, bool* out_just_closed, bool* out_text_clipped);
void ImGui_TableGetCellBgRect_wrap(const ImGuiTable* table, int column_n, ImRect* _out);
void ImGui_TeleportMousePos_wrap(ImVec2 const* pos);
bool ImGui_TempInputScalar_wrap(ImRect const* bb, ImGuiID id, const char* label, ImGuiDataType data_type, void* p_data, const char* format, const void* p_clamp_min, const void* p_clamp_max);
bool ImGui_TempInputText_wrap(ImRect const* bb, ImGuiID id, const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
void ImGui_TreeNodeDrawLineToChildNode_wrap(ImVec2 const* target_pos);
void ImGui_UpdateHoveredWindowAndCaptureFlags_wrap(ImVec2 const* mouse_pos);
void ImGui_WindowPosAbsToRel_wrap(ImGuiWindow* window, ImVec2 const* p, ImVec2* _out);
void ImGui_WindowPosRelToAbs_wrap(ImGuiWindow* window, ImVec2 const* p, ImVec2* _out);
void ImGui_WindowRectAbsToRel_wrap(ImGuiWindow* window, ImRect const* r, ImRect* _out);
void ImGui_WindowRectRelToAbs_wrap(ImGuiWindow* window, ImRect const* r, ImRect* _out);
void ImGuiListClipperRange_FromIndices_wrap(int min, int max, ImGuiListClipperRange* _out);
void ImGuiListClipperRange_FromPositions_wrap(float y1, float y2, int off_min, int off_max, ImGuiListClipperRange* _out);
void ImGuiViewportP_CalcWorkRectPos_wrap(const ImGuiViewportP* self, ImVec2 const* inset_min, ImVec2* _out);
void ImGuiViewportP_CalcWorkRectSize_wrap(const ImGuiViewportP* self, ImVec2 const* inset_min, ImVec2 const* inset_max, ImVec2* _out);
void ImGuiViewportP_GetBuildWorkRect_wrap(const ImGuiViewportP* self, ImRect* _out);
void ImGuiViewportP_GetMainRect_wrap(const ImGuiViewportP* self, ImRect* _out);
void ImGuiViewportP_GetWorkRect_wrap(const ImGuiViewportP* self, ImRect* _out);
ImGuiID ImGuiWindow_GetIDFromPos_wrap(ImGuiWindow* self, ImVec2 const* p_abs);
ImGuiID ImGuiWindow_GetIDFromRectangle_wrap(ImGuiWindow* self, ImRect const* r_abs);
void ImGuiWindow_MenuBarRect_wrap(const ImGuiWindow* self, ImRect* _out);
void ImGuiWindow_Rect_wrap(const ImGuiWindow* self, ImRect* _out);
void ImGuiWindow_TitleBarRect_wrap(const ImGuiWindow* self, ImRect* _out);
void ImRect_Add_wrap(ImRect* self, ImVec2 const* p);
void ImRect_AddImRect_wrap(ImRect* self, ImRect const* r);
void ImRect_ClipWith_wrap(ImRect* self, ImRect const* r);
void ImRect_ClipWithFull_wrap(ImRect* self, ImRect const* r);
bool ImRect_Contains_wrap(const ImRect* self, ImVec2 const* p);
bool ImRect_ContainsImRect_wrap(const ImRect* self, ImRect const* r);
bool ImRect_ContainsWithPad_wrap(const ImRect* self, ImVec2 const* p, ImVec2 const* pad);
void ImRect_ExpandImVec2_wrap(ImRect* self, ImVec2 const* amount);
void ImRect_GetBL_wrap(const ImRect* self, ImVec2* _out);
void ImRect_GetBR_wrap(const ImRect* self, ImVec2* _out);
void ImRect_GetCenter_wrap(const ImRect* self, ImVec2* _out);
void ImRect_GetSize_wrap(const ImRect* self, ImVec2* _out);
void ImRect_GetTL_wrap(const ImRect* self, ImVec2* _out);
void ImRect_GetTR_wrap(const ImRect* self, ImVec2* _out);
bool ImRect_Overlaps_wrap(const ImRect* self, ImRect const* r);
void ImRect_ToVec4_wrap(const ImRect* self, ImVec4* _out);
void ImRect_Translate_wrap(ImRect* self, ImVec2 const* d);

#ifdef __cplusplus
}
#endif

#endif