generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGuiViewportP.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.Internal.ImGuiViewportP where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types hiding (ImDrawListSharedData, ImFontAtlasBuilder, ImFontLoader, ImGuiContext)
import DearImGui.Raw.Internal.Types

#include "dcimgui_nodefaultargfunctions_internal.h"

-- functions

foreign import capi unsafe "DearImGuiWrappers.h ImGuiViewportP_CalcWorkRectPos_wrap"
  c_imGuiViewportP_CalcWorkRectPos :: (Ptr ImGuiViewportP) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

imGuiViewportP_CalcWorkRectPos :: (Ptr ImGuiViewportP) -> ImVec2 -> IO ImVec2
imGuiViewportP_CalcWorkRectPos self inset_min =
  with inset_min $ \_p1 -> alloca $ \_pOut -> c_imGuiViewportP_CalcWorkRectPos self _p1 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGuiViewportP_CalcWorkRectSize_wrap"
  c_imGuiViewportP_CalcWorkRectSize :: (Ptr ImGuiViewportP) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

imGuiViewportP_CalcWorkRectSize :: (Ptr ImGuiViewportP) -> ImVec2 -> ImVec2 -> IO ImVec2
imGuiViewportP_CalcWorkRectSize self inset_min inset_max =
  with inset_min $ \_p1 -> with inset_max $ \_p2 -> alloca $ \_pOut -> c_imGuiViewportP_CalcWorkRectSize self _p1 _p2 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGuiViewportP_GetBuildWorkRect_wrap"
  c_imGuiViewportP_GetBuildWorkRect :: (Ptr ImGuiViewportP) -> (Ptr ImRect) -> IO ()

imGuiViewportP_GetBuildWorkRect :: (Ptr ImGuiViewportP) -> IO ImRect
imGuiViewportP_GetBuildWorkRect self =
  alloca $ \_pOut -> c_imGuiViewportP_GetBuildWorkRect self _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGuiViewportP_GetMainRect_wrap"
  c_imGuiViewportP_GetMainRect :: (Ptr ImGuiViewportP) -> (Ptr ImRect) -> IO ()

imGuiViewportP_GetMainRect :: (Ptr ImGuiViewportP) -> IO ImRect
imGuiViewportP_GetMainRect self =
  alloca $ \_pOut -> c_imGuiViewportP_GetMainRect self _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGuiViewportP_GetWorkRect_wrap"
  c_imGuiViewportP_GetWorkRect :: (Ptr ImGuiViewportP) -> (Ptr ImRect) -> IO ()

imGuiViewportP_GetWorkRect :: (Ptr ImGuiViewportP) -> IO ImRect
imGuiViewportP_GetWorkRect self =
  alloca $ \_pOut -> c_imGuiViewportP_GetWorkRect self _pOut >> peek _pOut

-- C: void UpdateWorkRect(ImGuiViewportP* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGuiViewportP_UpdateWorkRect"
  imGuiViewportP_UpdateWorkRect :: (Ptr ImGuiViewportP) -> IO ()
